# MLOPS_PUJ_Grupo6

./: .gitignore  Modelamiento.ipynb  README.md  modelo.ipynb
Proyectos/: README.md  docker-compose.yaml
Proyectos/Proyecto1/: Proyecto1.ipynb  README.md  docker-compose.yaml  dockerfile
Proyectos/Proyecto1/workspace/: Proyecto1.ipynb  README.md  pyproject.toml
Proyectos/Proyecto1/workspace/.ipynb_checkpoints/: Proyecto1-checkpoint.ipynb  pyproject-checkpoint.toml
Proyectos/Proyecto2/: README.md  borrador_modelo.ipynb  docker-compose-external.yaml  docker-compose-p2.yaml  docker-compose.yaml  streamlit_app.py
Proyectos/Proyecto3/: README.md  docker-compose-airflow.yaml  docker-compose-jupyter.yaml  docker-compose-kubernete.yaml  docker-compose-resto-back.yaml  (+5 more)
app/: docker-compose.yaml  main.py  model.pkl  modeloRF.pkl  modeloSVM.pkl  requirements.txt
app2/: dockerfile  probando.txt
proyecto1/: TFDV.ipynb  covertype_constants.py  covertype_transform.py  dockerfile  proyecto1.ipynb  serving_data.csv
taller_airflow/: README.md  docker-compose.yaml  dockerfile
taller_argo/: README.md
taller_contenedores/: README.md  creacion_modelo.ipynb  docker-compose.yaml  dockerfile.jupyter
taller_locust/: README.md  docker-compose-inference-swarm.yaml  docker-compose-inference.yaml  docker-compose-locust-mod.yaml  docker-compose-locust.yaml  locustfile.py
taller_mlflow/: README.md  docker-compose-fastapi.yaml  docker-compose-minio.yaml  docker-compose-mysql.yaml  docker-compose-mysql.yml  docker-compose-postgresql.yml  docker-compose.yaml  mlflow_serv.service
(+257 files in other folders)
